tests/baselines/reference/generatorTypeCheck31.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck31.ts(2,11): error TS2322: Type 'IterableIterator<(x: 任意) => 任意>' is not assignable to type '() => Iterable<(x: 文字) => 数字>'.
  Type 'IterableIterator<(x: 任意) => 任意>' provides no match for the signature '(): Iterable<(x: string) => number>'.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck31.ts (1 errors) ====
    function* g2(): Iterator<() => Iterable<(x: string) => number>> {
        yield function* () {
              ~~~~~~~~~~~~~~
            yield x => x.length;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        } ()
    ~~~~~~~~
!!! error TS2322: Type 'IterableIterator<(x: 任意) => 任意>' is not assignable to type '() => Iterable<(x: 文字) => 数字>'.
!!! error TS2322:   Type 'IterableIterator<(x: 任意) => 任意>' provides no match for the signature '(): Iterable<(x: string) => number>'.
    }